Fix Issue on Safari IOS. Text color f submit button was white and not black.

--- a/users/control/style.css
+++ b/users/control/style.css
@@ -291,6 +291,7 @@ label #type {
     font-size: 14px;
     padding: 2px 10px;
     cursor: pointer;
+    color: black;
 }
 .addsrv:hover {
     background-color: rgb(210, 210, 210);
